updated brand parner slide

--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "next": "15.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.5.5"
+    "react-fast-marquee": "^1.6.5",
+    "swiper": "^11.1.15",
+    "tailwind-merge": "^2.5.5",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
